# QuollEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  DOCS.md  Doxyfile  LICENSE  README.md  STYLE_GUIDE.md  formats.txt  premake5.lua  project.json  project.py  vcpkg-configuration.json  vcpkg.json
.github/workflows/: github-actions-default.yml  github-actions-main.yml  github-actions-pr.yml  main-pr.yml  main-push.yml
.premake/: core.lua  workspace.lua
.premake/core/: dependencies.lua  files.lua  library.lua  platform.lua  testing.lua  toolset.lua
.premake/vendor-projects/: libimgui.lua  libimguizmo.lua  liblua.lua  libmikktspace.lua  libmsdf-atlas-gen.lua  libmsdfgen.lua  libspirv-reflect.lua  libvolk.lua
demos/basic-triangle/: premake5.lua
demos/pong-3d/: premake5.lua
demos/rhi-test/: premake5.lua
demos/scene-viewer/: premake5.lua
editor/: premake5.lua
editor/assets/: default-scene.gltf
editor/src/: main.cpp
engine/: premake5.lua
engine/platform-tools/: premake5.lua
platform/: premake5.lua
platform-tools/: premake5.lua
platform-tools/src/: MacOsFileDialog.mm  Win32FileDialog.win32.cpp  X11FileDialog.linux.cpp
platform/linux/: premake5.lua
platform/macos/: premake5.lua
platform/win32/: premake5.lua
rhi/: premake5.lua
runtime/: premake5.lua
scripts/: clang-format-all.ps1  clang-format-all.sh  clang-tidy-all.ps1  clang-tidy-all.sh  doxygen-validate.sh  generate-coverage-report.ps1  generate-coverage-report.sh  generate-fa-values.py  generate-key-mappings.py  generate-types.py  llvm-cov.sh  run-tests.ps1  vars.ps1
(+2792 files in other folders)
